# grafbase-grpc-extension

./: Cargo.toml  compose.yaml
.github/workflows/: build-grpc-extension.yml  bump-extension-version.yml  publish.yml  pull-request.yml  release-cli-extensions.yml
extensions/grpc/: Cargo.toml
extensions/grpc/src/: lib.rs  resolvers.rs
