[workspace]
resolver = "2"
members = ["crates/*", "extensions/*", "cli/*", "publish-extensions", "test-matrix"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
homepage = "https://grafbase.com/extensions"
keywords = ["grafbase"]
repository = "https://github.com/grafbase/extensions"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
panic = "deny"

# Opt out of lints that have too many false positives or are yet to be addressed.
bool-to-int-with-if = "allow"
cast-possible-truncation = "allow"
default-trait-access = "allow"
derive-partial-eq-without-eq = "allow"
doc-markdown = "allow"
enum-glob-use = "allow"
implicit-hasher = "allow"
items-after-statements = "allow"
into_iter_without_iter = "allow"
iter_without_into_iter = "allow"
large-digit-groups = "allow"
let-underscore-untyped = "allow"
let-with-type-underscore = "allow"
manual-assert = "allow"
map-unwrap-or = "allow"
match-wildcard-for-single-variants = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
module-name-repetitions = "allow"
must-use-candidate = "allow"
needless-pass-by-value = "allow"
redundant-closure-for-method-calls = "allow"
single-match-else = "allow"
struct-excessive-bools = "allow"
struct-field-names = "allow"
too-many-lines = "allow"
unnecessary-fallible-conversions = "allow"
unused-async = "allow"
unused-self = "allow"
wildcard-imports = "allow"

[workspace.dependencies]
Inflector = "0.11.4"
anyhow = "1.0.98"
async-nats = "0.42"
async-stream = "0.3.6"
base64 = "0.22.1"
bytes = { version = "1.11.1", features = ["serde"] }
chrono = "0.4.40"
clap = "4.5.36"
ctor = "0.5"
duration-str = "0.17"
enumflags2 = "0.7.11"
field-selection-map = { git = "https://github.com/grafbase/grafbase", package = "engine-field-selection-map" }
futures = "0.3"
futures-util = "0.3.31"
fxhash = "0.2.1"
grafbase-database-definition = { version = "0.1.0", path = "crates/database-definition" }
grafbase-postgres-introspection = { version = "0.1.0", path = "crates/postgres-introspection" }
grafbase-sdk = "0.22.1"
hashbrown = "0.15"
http = "1.3"
indexmap = "2.9.0"
indoc = "2.0.6"
insta = { version = "1.42.2", features = ["json", "glob"] }
itertools = "0.14.0"
jiff = "0.2.6"
jwt-compact = "0.8.0"
names = "0.14.0"
oauth-protected-resource-shared = { version = "0.1.0", path = "crates/oauth-protected-resource-shared" }
openidconnect = "4.0.0"
ory-client = "=1.9.0"
paste = "1"
pem = "3.0.5"
percent-encoding = "2"
pkcs1 = "0.7.5"
pkcs8 = "0.10.2"
postcard = "1"
pretty_assertions = "1.4.1"
prost = { version = "0.13.5", default-features = false, features = ["std"] }
protobuf = "3"
protobuf-support = "3"
rand = "*"
rapidhash = "1.4"
regex = "1.11.1"
reqwest = "0.12.12"
rskafka = "0.6.0"
serde = "1.0.219"
serde_json = "1"
serde_with = "3.12.0"
sha2 = "0.10.8"
sql-ast = { version = "0.1.0", path = "crates/sql-ast" }
sqlx = { version = "0.8.4", default-features = false }
strum = { version = "0.27.1", features = ["derive"] }
tempfile = "3"
template = { path = "crates/template" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
tokio-stream = "0.1.17"
toml = "0.9"
tonic = "0.12.3"
tonic-build = { version = "0.12.3", features = ["prost"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
url = { version = "2.5.4", features = ["serde"] }
walkdir = "2"
wiremock = "0.6.3"
