[package]
name = "grpc"
version = "0.2.2"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64.workspace = true
bytes.workspace = true
futures-util.workspace = true
grafbase-sdk.workspace = true
jiff.workspace = true
prost.workspace = true
serde.workspace = true

[dev-dependencies]
async-stream.workspace = true
grafbase-sdk = { workspace = true, features = [
    "test-utils",
] }
insta.workspace = true
pretty_assertions.workspace = true
prost = { workspace = true, default-features = true }
rand.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
